# Quizie

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
quizie/: __init__.py  main.py  quiz.py
quizie.egg-info/: PKG-INFO
