[metadata]
name = quizie
version = 0.1.0
author = epochie
author_email = support@epochie.com
description = Generate quizzes on any topic using Gemini AI.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/quizie
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    google-generativeai
